--- a/site/assets/css/flexi_frontend.css
+++ b/site/assets/css/flexi_frontend.css
@@ -22,13 +22,13 @@
 #flexicontent .floattext:after { /* ie fix in conditional comments (html source) */
 	clear: both;
 	content: ".";
-	display: block;
+	display: inline-block;
 	height: 0;
 	visibility: hidden;
 }
 
 #flexicontent .floattext {
-	display: block;
+	display: inline-block;
 	margin: 0 0 0.5em; /* safari */
 }
 
