--- a/site/templates/default/css/item.css
+++ b/site/templates/default/css/item.css
@@ -115,12 +115,13 @@ span.flexi.value, .flexi.value {
 }
 .twocols .flexi.label {
 	min-width: 34%;
-	margin-right: 6%;
-	margin-bottom:6px;
+	margin: 2px 3% 6px 0;
+	box-sizing: border-box;
 }
 .twocols .flexi.value {
-	min-width: 58%;
-	margin-right: 1%;
+	min-width: 59%;
+	margin: 2px 4% 6px 0;
+	box-sizing: border-box;
 }
 
 /* ===============================================
