# Fixed 3 issues related to new small word indexing, post-installation content type binding in items manager did not add small word prefix, fixed search index needed to be clicked twice for search index to be created, fixed purge advanced index button, fixed a CSS issue in directory view, changed preview button in frontend form to be full screen width

--- a/site/assets/css/flexi_frontend.css
+++ b/site/assets/css/flexi_frontend.css
@@ -19,16 +19,8 @@
 	visibility: hidden;
 }
 
-#flexicontent .floattext:after { /* ie fix in conditional comments (html source) */
-	clear: both;
-	content: ".";
-	display: inline-block;
-	height: 0;
-	visibility: hidden;
-}
-
 #flexicontent .floattext {
-	display: inline-block;
+	display: block;
 	margin: 0 0 0.5em; /* safari */
 }
 
