# Added option to FAQ template (sub-category placement) to place sub-category columns as masonry tiles

--- a/plugins/flexicontent_fields/toolbar/toolbar/toolbar.css
+++ b/plugins/flexicontent_fields/toolbar/toolbar/toolbar.css
@@ -98,7 +98,7 @@
 
 /* Social share container and addthis */
 .flexi-socials {
-	padding-top: 9px;
+	padding: 9px 0;
 }
 .flexi-socials-outside {
 	/*clear: both;*/
