--- a/site/assets/css/flexi_containers.css
+++ b/site/assets/css/flexi_containers.css
@@ -284,6 +284,56 @@ body .fc-mssg.fc-noborder  {
 
 
 /********************
+ * CSS for JS sliders
+ ********************/
+ 
+.fc_slider_input_box { /* hide connected fields */
+	display: none;
+}
+
+.fc-sliderTooltip.fc-left {
+	right: 18px;
+	left: unset;
+}
+.fc-sliderTooltip.fc-left.fc-bottom {
+	right: 33px;
+	left: unset;
+	top: 0px;
+}
+
+.fc-sliderTooltip.fc-right {
+	right: unset;
+	left: 18px;
+}
+.fc-sliderTooltip.fc-right.fc-bottom {
+	right: unset;
+	left: 33px;
+	top: 0px;
+}
+
+.fc-sliderTooltip {
+	display: block;
+	position: absolute;
+	border: 1px solid #D9D9D9;
+	font: 400 12px/12px Arial;
+	border-radius: 3px;
+	background: #fff;
+	top: -24px;
+	padding: 5px 1px;
+	left: -9px;
+	text-align: center;
+	min-width: 90px;
+	min-height: 24px;
+	background: lightgoldenrodyellow;
+}
+.fc-sliderTooltip strong {
+	display: block;
+	padding: 2px;
+}
+
+
+
+/********************
  * Various Containers
  ********************/
  
