--- a/admin/models/forms/item.xml
+++ b/admin/models/forms/item.xml
@@ -225,7 +225,7 @@
 
 <fields name="metadata">
 		<field name="" type="separator" default="FLEXI_ADVANCED" description="" level="level2" />
-		<field name="robots" type="radio" label="FLEXI_METADATA_ROBOTS_LABEL" description="FLEXI_METADATA_ROBOTS_DESC" class="use_select2_lib">
+		<field name="robots" type="radio" label="FLEXI_METADATA_ROBOTS_LABEL" description="FLEXI_METADATA_ROBOTS_DESC" class="btn-group btn-group-yesno">
 			<option value="">FLEXI_USE_GLOBAL</option>
 			<option value="index, follow">FLEXI_INDEX_FOLLOW</option>
 			<option value="noindex, follow">FLEXI_NOINDEX_FOLLOW</option>
