--- a/site/assets/css/flexi_form_fields.css
+++ b/site/assets/css/flexi_form_fields.css
@@ -7,10 +7,11 @@
 	display: inline-block;
 	list-style: none !important;
 	position: static;
-	width: auto;
 	float: left;
 	padding: 0% !important;  /* FORCED */
 	margin: 0% !important;  /* FORCED */
+	box-sizing: border-box;
+	width: 100%;
 }
 
 
@@ -19,13 +20,15 @@
 #flexicontent div.fcfieldval_container.valuebox  /* single value (div) */
 {
 	clear: both;
-	display: inline-block;
 	height: auto;
 	position: relative;
 	background: transparent;
 	border: 0px solid lightgray;
 	margin: 0 4px 4px 0;
 	padding: 4px;
+	box-sizing: border-box;
+	width: 100%;
+	display: inline-block;
 	float: left;
 }
 
@@ -37,6 +40,7 @@
 /* FIELD: multiple-value (sortable) container (not cleared) */
 #flexicontent ul.fcfield-sortables > li.fcfieldval_container.valuebox.floated {
 	clear: none;
+	width: unset;
 }
 /* FIELD: single-value container */
 #flexicontent div.fcfieldval_container.valuebox {
@@ -90,9 +94,14 @@
 }
 /* FIELD-GROUP: value container (contains grouped fields) */
 #flexicontent ul.fcfield-sortables.fcfield-group > li.fcfieldval_container.valuebox {
-	border: 1px dashed gray;
-	border-radius: 8px !important;
+	border: 1px solid #e0e0e0;
+	moz-box-shadow: 1px 1px 6px rgba(0,0,0,.2);
+	-webkit-box-shadow: 1px 1px 6px rgba(0,0,0,.2);
+	box-shadow: 1px 1px 6px rgba(0,0,0,.2);
+	border-radius: 2px;
 	width: 100%;
+	margin: 0 4px 16px 0;
+	padding: 12px;
 }
 /* FIELD-GROUP: label of grouped field */
 #flexicontent ul.fcfield-sortables.fcfield-group > li.fcfieldval_container.valuebox .flexi.label.sub_label {
@@ -298,6 +307,17 @@ div.empty_image {
 	margin-bottom:3px;
 	word-wrap: break-word;
 }
+table.img_upload_select {
+	float:left;
+	clear:none;
+	border: 1px solid #e0e0e0;
+	moz-box-shadow: 1px 1px 6px rgba(0,0,0,.2);
+	-webkit-box-shadow: 1px 1px 6px rgba(0,0,0,.2);
+	box-shadow: 1px 1px 6px rgba(0,0,0,.2);
+	border-radius: 2px;
+	margin-bottom:16px;
+}
+
 /* FIELDs: (image field) preview image container */
 .fcimg_preview_box {
 	float:left!important;
