--- a/admin/assets/css/j3x.css
+++ b/admin/assets/css/j3x.css
@@ -49,6 +49,9 @@
 .icon-32-copy_wvalues	{ background-image: url(../../../../templates/hathor/images/toolbar/icon-32-copy.png); }
 .icon-32-test,
 .icon-32-preview			{ background-image: url(../../../../templates/hathor/images/toolbar/icon-32-preview.png); }
+@media (min-width: 1020px) {
+	.btn.spaced-btn { margin-left; }
+}
 
 /*.icon-32-basicindex		{ background-image: url(../../../../templates/hathor/images/toolbar/icon-32-batch.png); }
 .icon-32-basicfilter	{ background-image: url(../../../../templates/hathor/images/toolbar/icon-32-refresh.png); }
