--- a/admin/models/forms/category.xml
+++ b/admin/models/forms/category.xml
@@ -908,6 +908,7 @@
 	<fields name="metadata">
 		<field name="page_title" type="text" label="JFIELD_ALT_PAGE_TITLE_LABEL" description="JFIELD_ALT_PAGE_TITLE_DESC" size="30"/>
 		<field name="author" type="text" label="JAUTHOR" description="JFIELD_METADATA_AUTHOR_DESC" size="30"/>
+        <field name="catmicrodata_itemtype" type="microdatatype" default="" label="FLEXI_MICRODATA_ITEMTYPE" description="FLEXI_MICRODATA_ITEMTYPE_DESC" class="use_select2_lib" />
 		<field name="robots" type="radio" label="FLEXI_METADATA_ROBOTS_LABEL" description="FLEXI_METADATA_ROBOTS_DESC" class="btn-group btn-group-yesno">
 			<option value="">JGLOBAL_USE_GLOBAL</option>
 			<option value="index, follow">JGLOBAL_INDEX_FOLLOW</option>
