--- a/admin/models/forms/type.xml
+++ b/admin/models/forms/type.xml
@@ -301,19 +301,7 @@
 		<fieldset name="seo" label="FLEXI_SEO" icon_class="icon-search">
 		
 			<field name="" type="separator" default="FLEXI_MICRODATA_SUPPORT" description="FLEXI_MICRODATA_SUPPORT_DESC" level="level2" />
-			<field name="microdata_itemtype" type="list" default="" label="FLEXI_MICRODATA_ITEMTYPE" description="FLEXI_MICRODATA_ITEMTYPE_DESC" class="use_select2_lib">
-				<option value="">FLEXI_NO</option>
-				<option value="NewsArticle">NewsArticle</option>
-				<option value="Person">Person</option>
-				<option value="Product">Product</option>
-				<option value="Event">Event</option>
-				<option value="Recipe">Recipe</option>
-				<option value="Organization">Organization</option>
-				<option value="Movie">Movie</option>
-				<option value="Book">Book</option>
-				<option value="Review">Review</option>
-				<option value="SoftwareApplication">SoftwareApplication</option>
-			</field>
+			<field name="microdata_itemtype" type="microdatatype" label="FLEXI_MICRODATA_ITEMTYPE" description="FLEXI_MICRODATA_ITEMTYPE_DESC" />
 			
 			<field name="" type="separator" default="FLEXI_TYPE_SEO_HTML_TITLE" level="level2" />
 			<field name="override_title" type="radio" default="0" label="FLEXI_OVERRIDE_PAGETTITLE" description="FLEXI_OVERRIDE_PAGETTITLE_DESC" class="btn-group btn-group-yesno">
