Fixed form submission not triggering on-submit events (e.g. jQuery inputmask needs this to unmask decimals and to unmask currency, so that e.g. currency character is not submitted) or so that comma radix point is converted to dot for consistent DB storing of decimals

--- a/site/assets/css/flexi_form.css
+++ b/site/assets/css/flexi_form.css
@@ -428,13 +428,13 @@ html button {
 	font-size:11px;
 	display:none;
 	padding: 4px 0px 4px 30px;
-	background: white url(../images/ajax-loader.gif) 0px 3px no-repeat;
+	background: transparent url(../images/ajax-loader.gif) 0px 3px no-repeat;
 }
 .fc_loading_msg {
 	font-size: 14px;
 	font-size: times;
 	padding: 4px 0px 4px 30px;
-	background: white url(../images/ajax-loader.gif) 6px 5px no-repeat;
+	background: transparent url(../images/ajax-loader.gif) 6px 5px no-repeat;
 }
 #flexi_form_submit_btns {
 	font-size:11px;
