--- a/site/assets/css/flexi_form.css
+++ b/site/assets/css/flexi_form.css
@@ -568,3 +568,18 @@ body .alert.fcinlineblock {
 
 #flexicontent div.input-append > input { margin:0px !important; border-top-right-radius:0px !important;  border-bottom-right-radius:0px !important; }
 #flexicontent div.input-prepend > input { margin:0px !important; border-top-left-radius:0px !important;  border-bottom-left-radius:0px !important; }
+
+
+/* bootstrap field labels */
+.control-label {
+	clear: left;
+	float: left;
+	min-width: 120px;
+	text-align:right;
+	padding: 4px 16px 4px 2px;
+}
+
+.control-label .label {
+	width: auto;
+	display:inline-block;
+}
