--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -1269,12 +1269,12 @@ table.fc-form-tbl td.data {
 	left: 40%;
 	
 	color: black;
-	background: white url(../images/ajax-loader.gif) 30px 40px no-repeat;
+	background: white 30px 40px no-repeat;
 	opacity:1;
 	filter:alpha(opacity=100); /* For IE8 and earlier */
 	
 	width: auto;
-	padding: 40px 0px 46px 60px;
+	padding: 20px 0px 26px 30px;
 	margin: 0px;
 	
 	font-size: 12px;
@@ -1288,10 +1288,12 @@ table.fc-form-tbl td.data {
 	display: block;
 	width: 300px;
 	height: 22px;
-	border: 1px solid #111;
-	background-color: #292929;
+	background-color: #f5f5f5;
+        border-radius: 4px;
+        -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+        box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 	position: relative;
-	left: -30px;
+	left: -15px;
 	top:6px;
 }
 
