--- a/admin/models/forms/type.xml
+++ b/admin/models/forms/type.xml
@@ -334,9 +334,13 @@
 			
 			<field name="" type="separator" default="FLEXI_ITEM_VIEW" level="level0" />
 			
-			<field name="allow_jview" type="radio" default="0" label="FLEXI_REDIRECT_ARTICLE_VIEW" description="FLEXI_REDIRECT_ARTICLE_VIEW_DESC" class="btn-group group-fcmethod">
-				<option value="0">FLEXI_REDIRECT_TO_ITEM_VIEW</option>
-				<option value="1">FLEXI_ALLOW</option>
+			<field name="allow_jview" type="multilist" subtype="radio" default="0" toggle_related="1" label="FLEXI_REDIRECT_ARTICLE_VIEW" description="FLEXI_REDIRECT_ARTICLE_VIEW_DESC" class="btn-group group-fcmethod">
+				<option value="0" show_list="" hide_list="allow_jview">FLEXI_REDIRECT_TO_ITEM_VIEW</option>
+				<option value="1" show_list="allow_jview" hide_list="">FLEXI_ALLOW</option>
+			</field>
+			<field name="search_jlinks" type="radio" default="1" label="FLEXI_SEARCH_VIEW_LINKS_TYPE" description="FLEXI_SEARCH_VIEW_LINKS_TYPE_DESC" depend_class="allow_jview" class="btn-group group-fcinfo">
+				<option value="0">FLEXI_USE_FCITEMS_LINKS</option>
+				<option value="1">FLEXI_USE_JARTICLE_LINKS</option>
 			</field>
 			
 			<field name="" type="separator" default="Menu Item" level="level1" />
