Some minor changes for item form inline information message for fields, and cleared a PHP notice if a field has no HTML for item form

--- a/site/assets/css/flexi_form_fields.css
+++ b/site/assets/css/flexi_form_fields.css
@@ -109,7 +109,7 @@
 	max-width: 150px;
 	width: 20%;
 	padding: 4px 6px 4px 6px;
-	margin: 0 1% 0 0;
+	margin: 1px 1% 2px 0;
 	float:none;
 	
 	clear:none;
